bluec-tests/tests/valid/types_bool/multi/global_bool.c
_Bool a = 1;
_Bool b = 0;
_Bool c = 1;

int flip_bools(void) {
    a = 0;
    b = 1;
    c = 0;
    return 0;
}