bluec-tests/tests/invalid/types_longdouble/malformed_exponent.c
int main(void)
{
    long double f = 1.0e10.0L;
    return 0;
}